Fix a bug in front page recent posts' section time
Update #59

Time should appear below category on small screens.
It should appear on right on normal screens.

--- a/static/css/elegant.css
+++ b/static/css/elegant.css
@@ -579,8 +579,10 @@ div.recent-posts section a:hover {
     text-decoration: none;
 }
 div.recent-posts time {
-     display: inline;
      font-size: inherit;
+}
+div.recent-posts-time {
+    display: inline;
 }
 @media (max-width: 767px) {
     div.blog-archives h2 {
@@ -591,9 +593,10 @@ div.recent-posts time {
         padding-left: 0;
     }
     div.recent-posts time {
-        display: block;
         float: none;
-        text-align: left;
+    }
+    div.recent-posts-time {
+        display: block;
     }
 }
 /* MailChimp */
